driver/cuda_new/device/include/pie_cuda_device.h

// ---------------------------------------------------------------------------
// Status / versioning
// ---------------------------------------------------------------------------

typedef enum PieStatus {
    PIE_OK = 0,
    PIE_ERR_INVALID_ARG = 1,
    PIE_ERR_CUDA = 2,
    PIE_ERR_OOM = 3,
    PIE_ERR_UNSUPPORTED_ARCH = 4,
    PIE_ERR_INTERNAL = 5,
} PieStatus;
// ---------------------------------------------------------------------------
// Opaque handles — owned by the device lib, lifetime driven by Rust.
// ---------------------------------------------------------------------------

typedef struct PieDevCtx    PieDevCtx;     // device, stream, cuBLAS handle
typedef struct PieWeights   PieWeights;    // resident model weights
typedef struct PieKvCache   PieKvCache;    // paged KV / MLA / recurrent storage
typedef struct PieWorkspace PieWorkspace;  // per-step activation buffers + pinned inputs
typedef struct PieGraphExec PieGraphExec;  // a captured cudaGraphExec_t
// Selects which per-arch body/prepare to dispatch. Kept in lockstep
// with control/src/arch (ArchId).
typedef enum PieArchId {
    PIE_ARCH_LLAMA_LIKE = 0,
    PIE_ARCH_QWEN3 = 1,
    PIE_ARCH_QWEN3_5 = 2,
    PIE_ARCH_QWEN3_5_MOE = 3,
    PIE_ARCH_MIXTRAL = 4,
    PIE_ARCH_GEMMA2 = 5,
    PIE_ARCH_GEMMA3N = 6,
    PIE_ARCH_GEMMA4 = 7,
    PIE_ARCH_NEMOTRON_H = 8,
    PIE_ARCH_DEEPSEEK_V4 = 9,
    PIE_ARCH_KIMI = 10,
    PIE_ARCH_GLM5 = 11,
    PIE_ARCH_GPT_OSS = 12,
} PieArchId;
// ---------------------------------------------------------------------------
// POD argument structs (C layout, stable).
// ---------------------------------------------------------------------------

// All metadata to execute one forward body call. Mirrors driver/cuda's
// ForwardFn::ForwardInputs (executor.hpp:81). Pointers are device
// pointers unless suffixed _h (host/pinned).
typedef struct PieForwardInputs {
    const int32_t*  token_ids;
    const int32_t*  positions;

    const uint32_t* qo_indptr_d;
    const uint32_t* kv_page_indices_d;
    const uint32_t* kv_page_indptr_d;
    const uint32_t* kv_last_page_lens_d;
    const uint32_t* qo_indptr_h;
    const uint32_t* kv_page_indices_h;
    const uint32_t* kv_page_indptr_h;
    const uint32_t* kv_last_page_lens_h;

    int32_t total_tokens;     // N
    int32_t num_requests;     // R
    int32_t is_pure_decode;   // bool

    const uint8_t* custom_mask_d;          // optional BRLE-packed mask
    const int32_t* custom_mask_indptr_d;

    const int32_t* slot_ids_h;             // optional rs-cache slots
    const uint8_t* is_fresh_h;
    const int32_t* slot_ids_d;

    const int32_t* logit_row_indices_d;    // optional compact-logit gather
    int32_t        num_logit_rows;

    int32_t tp_greedy_argmax;              // bool

    const int32_t* commit_advance_gather_d;  // optional recurrent commit-advance
} PieForwardInputs;
// Host-side planning inputs (the prepare half). Mirrors
// ForwardFn::PrepareInputs (executor.hpp:128).
typedef struct PiePrepareInputs {
    const uint32_t* qo_indptr_h;
    const uint32_t* kv_page_indices_h;
    const uint32_t* kv_page_indices_d;
    const uint32_t* kv_page_indptr_h;
    const uint32_t* kv_page_indptr_d;
    const uint32_t* kv_last_page_lens_h;
    const uint32_t* kv_last_page_lens_d;
    int32_t total_tokens;
    int32_t num_requests;
    int32_t is_pure_decode;  // bool
} PiePrepareInputs;
// Sampling policy computed by Rust (control/src/sampler.rs). The argmax
// / categorical kernels stay C++; the policy + seeding is Rust.
typedef struct PieSampleParams {
    const float*   temperature;   // [num_rows] device
    const float*   top_p;         // [num_rows] device, NaN/1.0 = disabled
    const int32_t* top_k;         // [num_rows] device, <=0 = disabled
    const uint64_t* seed;         // [num_rows] device per-row PRNG seed
    int32_t num_rows;
    int32_t greedy;               // bool: argmax fast path, ignore temp/top_*
} PieSampleParams;
// KV cache geometry. Per-layer vectors are optional (NULL => homogeneous,
// use the scalar). Covers the cases driver/cuda's KvCache::allocate_per_layer
// handles (Gemma-4 dual head_dim + KV sharing).
typedef struct PieKvLayout {
    int32_t num_layers;
    int32_t num_pages;
    int32_t page_size;
    int32_t num_kv_heads;            // scalar fallback
    int32_t head_dim;                // scalar fallback
    uint32_t format;                 // PieKvFormat
    int32_t hnd_layout;              // bool (flashinfer HND)
    const int32_t* per_layer_head_dim;     // optional [num_layers]
    const int32_t* per_layer_num_kv_heads; // optional [num_layers]
    const int32_t* kv_source_layer;        // optional [num_layers] (KV sharing)
} PieKvLayout;
// Activation workspace sizing. Derived by the Rust arch + mem planner.
typedef struct PieWorkspaceDims {
    int32_t max_tokens;        // forward capacity (N)
    int32_t max_requests;      // R
    int32_t hidden_size;
    int32_t intermediate_size;
    int32_t num_heads;
    int32_t num_kv_heads;
    int32_t head_dim;
    int32_t vocab_size;
    int32_t num_layers;
    int32_t recurrent_state_slots;  // 0 if no Mamba/linear-attn state
    int32_t moe_experts;            // 0 if dense
} PieWorkspaceDims;
// Naive paged-KV attention (causal; no flashinfer). q/o [total_tokens,
// num_q_heads, head_dim] bf16; k_pages/v_pages [num_pages, page_size,
// num_kv_heads, head_dim] bf16. CSR page lists on device. sm_scale < 0 →
// 1/sqrt(head_dim); window_left < 0 → full causal.
PieStatus pie_cuda_attention_naive_paged_bf16(
    PieDevCtx* ctx, const void* q, const void* k_pages, const void* v_pages, void* o,
    const uint32_t* qo_indptr_d, const uint32_t* kv_page_indices_d,
    const uint32_t* kv_page_indptr_d, const uint32_t* kv_last_page_lens_d,
    int32_t total_tokens, int32_t num_requests, int32_t num_q_heads, int32_t num_kv_heads,
    int32_t head_dim, int32_t page_size, int32_t window_left, float sm_scale);
// ---------------------------------------------------------------------------
// Composed forward (phase-1 vertical slice). One llama-like decoder layer,
// chaining the lifted primitives in C++. The first `pie_body` fragment;
// generalized into the full IModel-style body path later. See
// forward/llama_layer.cuh for the slice simplifications (per-call scratch,
// contiguous KV append).
// ---------------------------------------------------------------------------

// Per-layer weights (device bf16). HF row-major: wq [n_q_heads*head_dim,
// hidden], wk/wv [n_kv_heads*head_dim, hidden], wo [hidden, n_q_heads*
// head_dim], w_gate/w_up [intermediate, hidden], w_down [hidden,
// intermediate], attn_norm/ffn_norm [hidden].
typedef struct PieLlamaLayerWeights {
    const void* attn_norm;
    const void* wq;
    const void* wk;
    const void* wv;
    const void* wo;
    const void* ffn_norm;
    const void* w_gate;
    const void* w_up;
    const void* w_down;
    // Per-head q/k RMSNorm gains [head_dim] (Qwen3); both null = no qk-norm.
    const void* q_norm;
    const void* k_norm;
    // Additive q/k/v projection biases (Qwen2); null = no bias.
    const void* q_bias;
    const void* k_bias;
    const void* v_bias;
} PieLlamaLayerWeights;
// Runs one llama-like decoder layer in place on `hidden` [num_tokens,
// hidden_size] bf16. positions [num_tokens] int32 (device). k_pages/v_pages
// [num_pages, page_size, n_kv_heads, head_dim] bf16. CSR page lists on device.
PieStatus pie_cuda_llama_layer_bf16(
    PieDevCtx* ctx, void* hidden, const PieLlamaLayerWeights* w, const int32_t* positions,
    void* k_pages, void* v_pages, const uint32_t* qo_indptr_d,
    const uint32_t* kv_page_indices_d, const uint32_t* kv_page_indptr_d,
    const uint32_t* kv_last_page_lens_d, int32_t num_tokens, int32_t num_requests,
    int32_t hidden_size, int32_t n_q_heads, int32_t n_kv_heads, int32_t head_dim,
    int32_t intermediate, int32_t page_size, float rms_eps, float rope_theta);
// Whole-model weights. `layers` is a host array of `n_layers` per-layer
// weight structs (each field a device pointer). embed/lm_head [vocab,
// hidden], final_norm [hidden] — device bf16.
typedef struct PieLlamaWeights {
    const void* embed;
    const PieLlamaLayerWeights* layers;
    int32_t n_layers;
    const void* final_norm;
    const void* lm_head;
} PieLlamaWeights;
// Full llama-like forward (prefill): embed → N layers → final norm →
// lm_head → argmax. token_ids/out_token_ids [num_tokens] int32 device;
// out_logits [num_tokens, vocab] bf16 device. KV for layer L is at
// kv_k/kv_v + L*(page_size*n_kv_heads*head_dim) bf16 elements. Uses `ws`
// scratch (allocated via pie_ws_alloc).
PieStatus pie_cuda_llama_forward_bf16(
    PieDevCtx* ctx, PieWorkspace* ws, const int32_t* token_ids, const PieLlamaWeights* w,
    const int32_t* positions, void* kv_k, void* kv_v, const uint32_t* qo_indptr_d,
    const uint32_t* kv_page_indices_d, const uint32_t* kv_page_indptr_d,
    const uint32_t* kv_last_page_lens_d, void* out_logits, int32_t* out_token_ids,
    int32_t num_tokens, int32_t num_requests, int32_t hidden_size, int32_t n_q_heads,
    int32_t n_kv_heads, int32_t head_dim, int32_t intermediate, int32_t page_size,
    int32_t num_kv_pages, int32_t vocab, float rms_eps, float rope_theta);
// ---------------------------------------------------------------------------
// Construction primitives (Rust builder drives these; replaces run_impl's
// alloc cascade). Weight binding consumes a handle from pie-weight-loader.
// ---------------------------------------------------------------------------

// `loader` is an opaque pointer into the Rust storage-program loader
// (pie-weight-loader); the device lib calls back to stream tensors H2D.
PieStatus pie_weights_bind(PieDevCtx* ctx, PieArchId arch, void* loader,
                           PieWeights** out_weights);
PieStatus pie_weights_destroy(PieWeights* weights);
PieStatus pie_kv_alloc(PieDevCtx* ctx, const PieKvLayout* layout,
                       PieKvCache** out_kv);
PieStatus pie_kv_destroy(PieKvCache* kv);
PieStatus pie_ws_alloc(PieDevCtx* ctx, const PieWorkspaceDims* dims,
                       PieWorkspace** out_ws);
PieStatus pie_ws_destroy(PieWorkspace* ws);
// Bytes for one KV page in the given layout (memory planner arithmetic).
size_t pie_kv_page_bytes(const PieKvLayout* layout);
// ---------------------------------------------------------------------------
// Hot path — one call each. Cheap across FFI.
// ---------------------------------------------------------------------------

// Refresh the workspace's pinned/device input buffers from `in`. Pointer
// stability of these buffers is what makes graph replay safe; Rust calls
// this every fire (direct, capture, or replay).
PieStatus pie_upload_inputs(PieWorkspace* ws, const PieForwardInputs* in);
// Host-side plan (flashinfer DecodePlan etc.) → device buffers. Must run
// before every fire, including before graph replay.
PieStatus pie_prepare(PieArchId arch, PieWorkspace* ws,
                      const PiePrepareInputs* in);
// Device-side forward body — the kernel sequence. No host loops/allocs;
// re-reads buffers that `pie_upload_inputs` / `pie_prepare` refreshed.
PieStatus pie_body(PieArchId arch, PieWeights* weights, PieWorkspace* ws,
                   PieKvCache* kv, const PieForwardInputs* in);
// Sample tokens from the workspace's logits into `out_tokens` (device,
// [num_rows]). Greedy fast path when params->greedy.
PieStatus pie_sample(PieWorkspace* ws, const PieSampleParams* params,
                     int32_t* out_tokens);
// ---------------------------------------------------------------------------
// CUDA graph — Rust owns policy (bucket choice, when to capture); the
// device lib owns the cudaGraph mechanics. Capture wraps a single body
// fire on the context stream.
// ---------------------------------------------------------------------------

PieStatus pie_graph_capture(PieDevCtx* ctx, PieArchId arch, PieWeights* weights,
                            PieWorkspace* ws, PieKvCache* kv,
                            const PieForwardInputs* in, PieGraphExec** out_exec);
PieStatus pie_graph_launch(PieGraphExec* exec, PieDevCtx* ctx);
PieStatus pie_graph_destroy(PieGraphExec* exec);