driver/cuda_new/control/src/ffi.rs

    pub fn pie_cuda_attention_naive_paged_bf16(
        ctx: *mut PieDevCtx, q: *const c_void, k_pages: *const c_void, v_pages: *const c_void,
        o: *mut c_void, qo_indptr_d: *const u32, kv_page_indices_d: *const u32,
        kv_page_indptr_d: *const u32, kv_last_page_lens_d: *const u32, total_tokens: i32,
        num_requests: i32, num_q_heads: i32, num_kv_heads: i32, head_dim: i32, page_size: i32,
        window_left: i32, sm_scale: f32) -> PieStatus;
    pub fn pie_cuda_llama_layer_bf16(
        ctx: *mut PieDevCtx, hidden: *mut c_void, w: *const PieLlamaLayerWeights,
        positions: *const i32, k_pages: *mut c_void, v_pages: *mut c_void,
        qo_indptr_d: *const u32, kv_page_indices_d: *const u32, kv_page_indptr_d: *const u32,
        kv_last_page_lens_d: *const u32, num_tokens: i32, num_requests: i32, hidden_size: i32,
        n_q_heads: i32, n_kv_heads: i32, head_dim: i32, intermediate: i32, page_size: i32,
        rms_eps: f32, rope_theta: f32) -> PieStatus;
    pub fn pie_cuda_llama_forward_bf16(
        ctx: *mut PieDevCtx, ws: *mut PieWorkspace, token_ids: *const i32,
        w: *const PieLlamaWeights, positions: *const i32, kv_k: *mut c_void, kv_v: *mut c_void,
        qo_indptr_d: *const u32, kv_page_indices_d: *const u32, kv_page_indptr_d: *const u32,
        kv_last_page_lens_d: *const u32, out_logits: *mut c_void, out_token_ids: *mut i32,
        num_tokens: i32, num_requests: i32, hidden_size: i32, n_q_heads: i32, n_kv_heads: i32,
        head_dim: i32, intermediate: i32, page_size: i32, num_kv_pages: i32, vocab: i32,
        rms_eps: f32, rope_theta: f32) -> PieStatus;

    pub fn pie_weights_bind(ctx: *mut PieDevCtx, arch: PieArchId, loader: *mut c_void,
                            out: *mut *mut PieWeights) -> PieStatus;
    pub fn pie_weights_destroy(w: *mut PieWeights) -> PieStatus;
    pub fn pie_kv_alloc(ctx: *mut PieDevCtx, layout: *const PieKvLayout,
                        out: *mut *mut PieKvCache) -> PieStatus;
    pub fn pie_kv_destroy(kv: *mut PieKvCache) -> PieStatus;
    pub fn pie_ws_alloc(ctx: *mut PieDevCtx, dims: *const PieWorkspaceDims,
                        out: *mut *mut PieWorkspace) -> PieStatus;
    pub fn pie_ws_destroy(ws: *mut PieWorkspace) -> PieStatus;
    pub fn pie_kv_page_bytes(layout: *const PieKvLayout) -> usize;

    pub fn pie_upload_inputs(ws: *mut PieWorkspace, inp: *const PieForwardInputs) -> PieStatus;
    pub fn pie_prepare(arch: PieArchId, ws: *mut PieWorkspace,
                       inp: *const PiePrepareInputs) -> PieStatus;
    pub fn pie_body(arch: PieArchId, w: *mut PieWeights, ws: *mut PieWorkspace,
                    kv: *mut PieKvCache, inp: *const PieForwardInputs) -> PieStatus;
    pub fn pie_sample(ws: *mut PieWorkspace, params: *const PieSampleParams,
                      out_tokens: *mut i32) -> PieStatus;

    pub fn pie_graph_capture(ctx: *mut PieDevCtx, arch: PieArchId, w: *mut PieWeights,
                             ws: *mut PieWorkspace, kv: *mut PieKvCache,
                             inp: *const PieForwardInputs,
                             out: *mut *mut PieGraphExec) -> PieStatus;
    pub fn pie_graph_launch(exec: *mut PieGraphExec, ctx: *mut PieDevCtx) -> PieStatus;
    pub fn pie_graph_destroy(exec: *mut PieGraphExec) -> PieStatus;
}
